aotClassLinking/BulkLoaderTest.java fails if VM options are incompatible

XMLWordPrintable

      test/hotspot/jtreg/runtime/cds/appcds/aotClassLinking/BulkLoaderTest.java tests the -XX:+AOTClassLinking flag. It fails if the test is executed with vm options that are incompatible with -XX:+AOTClassLinking. E.g.:

      $ jtreg -vmoption:--illegal-native-access=warn BulkLoaderTest.java
      ...
      Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: Expected to get exit value of [1], exit value is: [0]

      ====
      Proposed fix:

      Skip the test if the VM options are found to be incompatible with -XX:+AOTClassLinking

            Assignee:
            Ioi Lam
            Reporter:
            Ioi Lam
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: