8345646: aotClassLinking/BulkLoaderTest.java fails if VM options are incompatible